--- a/imdb/templates/imdb/name_detail.html
+++ b/imdb/templates/imdb/name_detail.html
@@ -36,24 +36,28 @@
                         Filmography
                     </h3>
 
+                    {% if casted_list %}
+                        <i class="fas fa-dot-circle" style="font-size: 12px; color:  greenyellow;"></i> <span style="color: #f5f5f5d6; font-size: 25px; margin-left: 2px; ">Acted</span>
+                        <br> <br>
+                        {% for movie in casted_list %}
+                        <i class="fas fa-hand-point-right" style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
+                        <a class="Filmography1" href="{% url 'imdb:movie_detail' movie.id_movie.id_movie %}" title="Watch this"
+                            target="_blank">{{movie.id_movie}}</a>
+                        <br> <br>
+                        {% endfor %}
+                    {% endif %}
+                     
+                    {% if directed_list %}
+                        <i class="fas fa-dot-circle" style="font-size: 12px; color:  greenyellow;"></i> <span style="color: #f5f5f5d6; font-size: 25px; margin-left: 2px; ">Directed</span> 
+                        <br> <br>
+                        {% for movie in directed_list %}
+                        <i class="fas fa-hand-point-right" style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
+                        <a class="Filmography1" href="{% url 'imdb:movie_detail' movie.id_movie.id_movie %}" title="Watch this"
+                            target="_blank">{{movie.id_movie}}</a>
+                        <br> <br>
+                        {% endfor %}
+                    {% endif %}
                     
-                    <i class="fas fa-dot-circle" style="font-size: 12px; color:  greenyellow;"></i> <span style="color: #f5f5f5d6; font-size: 25px; margin-left: 2px; ">Acted</span>
-                    <br> <br>
-                    {% for movie in casted_list %}
-                    <i class="fas fa-hand-point-right" style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
-                    <a class="Filmography1" href="{% url 'imdb:movie_detail' movie.id_movie.id_movie %}" title="Watch this"
-                        target="_blank">{{movie.id_movie}}</a>
-                    <br> <br>
-                    {% endfor %}
-                                                  
-                    <i class="fas fa-dot-circle" style="font-size: 12px; color:  greenyellow;"></i> <span style="color: #f5f5f5d6; font-size: 25px; margin-left: 2px; ">Directed</span> 
-                    <br> <br>
-                    {% for movie in directed_list %}
-                    <i class="fas fa-hand-point-right" style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
-                    <a class="Filmography1" href="{% url 'imdb:movie_detail' movie.id_movie.id_movie %}" title="Watch this"
-                        target="_blank">{{movie.id_movie}}</a>
-                    <br> <br>
-                    {% endfor %}
                    
                 </div>
                 <div class="bio">
