--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -274,8 +274,8 @@ body{font-family: arial,sans-serif; background-color: #191919; position: relativ
 }
 
 .Filmography1{
-	color: #f5f5f5d6;
 	text-decoration: none;
+	color: greenyellow;
 	font-size: 20px;
 }
 
