change genre title

--- a/imdb/templates/imdb/genre_detail.html
+++ b/imdb/templates/imdb/genre_detail.html
@@ -3,7 +3,7 @@
 {% block body %}
 <main class="content">
 	<section class="centered">
-		<h2 style="color: yellow; font-size: 32px; border-bottom: 1px silver solid; padding: 5px 0; margin-top: 20px; font-family: sans-serif;">ACTION</h2>
+		<h2 style="color: yellow; font-size: 32px; border-bottom: 1px silver solid; padding: 5px 0; margin-top: 20px; font-family: sans-serif;">{{genre.name_genre}}</h2>
 		<div class="movies">
 			{% for movie in movie_list %}
 			<div class="mov">
