--- a/imdb/templates/imdb/movie_detail.html
+++ b/imdb/templates/imdb/movie_detail.html
@@ -8,8 +8,9 @@
 			</div>
 			<div class="content">
 				<a class="td" href="#">{{movie}} </a>
-				<span class="ngoac">(</span> 
-				<a class="movie-year" href="{% url 'imdb:movie_search' %}?query={{movie.year_movie}}">{{movie.year_movie}}</a>
+				<span class="ngoac">(</span>
+				<a class="movie-year"
+					href="{% url 'imdb:movie_search' %}?query={{movie.year_movie}}">{{movie.year_movie}}</a>
 				<span class="ngoac">)</span>
 				<p class="text-muted" style="margin-top: 8px; font-size: 12px;">
 					<span class="runtime">{{movie.duration_movie}}</span>
@@ -22,7 +23,9 @@
 				<div class="rating">
 					<i class="fas fa-star" style="font-size: 30px; border-bottom: 5px; color: yellow;"></i>
 					{{movie.rating_movie}}
-					<i class="far fa-star" style="margin-left: 40px; cursor: pointer;"></i> Rate
+					<i class="far fa-star" style="margin-left: 40px; cursor: pointer;"></i> <a class="rating"
+						href="{{movie.link_movie}}">Rate</a>
+
 				</div>
 				<p class="text-muted-2">
 					{{movie.description_movie}}
@@ -30,15 +33,15 @@
 				<p class="caster">
 					Director:
 					{% for director in director_list %}
-					<a class="cast" href="{% url 'imdb:name_detail' director.id_name.id_name %}" title="Watch detailed {{director.id_name}}"
-						target="_blank">{{director.id_name}}</a>,
+					<a class="cast" href="{% url 'imdb:name_detail' director.id_name.id_name %}"
+						title="Watch detailed {{director.id_name}}" target="_blank">{{director.id_name}}</a>,
 					{% endfor %}
 					<br> <br>
 					Star:
 					{% for cast in cast_list %}
-					
-					<a class="cast" href="{% url 'imdb:name_detail' cast.id_name.id_name %}" title="Watch detailed {{cast.id_name}}"
-						target="_blank">{{cast.id_name}}</a>,
+
+					<a class="cast" href="{% url 'imdb:name_detail' cast.id_name.id_name %}"
+						title="Watch detailed {{cast.id_name}}" target="_blank">{{cast.id_name}}</a>,
 					{% endfor %}
 				</p>
 				<p class="votes-visible">
