--- a/imdb/templates/imdb/name_detail.html
+++ b/imdb/templates/imdb/name_detail.html
@@ -37,28 +37,32 @@
                     </h3>
 
                     {% if casted_list %}
-                        <i class="fas fa-dot-circle" style="font-size: 12px; color:  greenyellow;"></i> <span style="color: #f5f5f5d6; font-size: 25px; margin-left: 2px; ">Acted</span>
-                        <br> <br>
-                        {% for movie in casted_list %}
-                        <i class="fas fa-hand-point-right" style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
-                        <a class="Filmography1" href="{% url 'imdb:movie_detail' movie.id_movie.id_movie %}" title="Watch this"
-                            target="_blank">{{movie.id_movie}}</a>
-                        <br> <br>
-                        {% endfor %}
+                    <i class="fas fa-dot-circle" style="font-size: 12px; color:  greenyellow;"></i> <span
+                        style="color: #f5f5f5d6; font-size: 25px; margin-left: 2px; ">Acted</span>
+                    <br> <br>
+                    {% for movie in casted_list %}
+                    <i class="fas fa-hand-point-right"
+                        style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
+                    <a class="Filmography1" href="{% url 'imdb:movie_detail' movie.id_movie.id_movie %}"
+                        title="Watch this" target="_blank">{{movie.id_movie}}</a>
+                    <br> <br>
+                    {% endfor %}
                     {% endif %}
-                     
+
                     {% if directed_list %}
-                        <i class="fas fa-dot-circle" style="font-size: 12px; color:  greenyellow;"></i> <span style="color: #f5f5f5d6; font-size: 25px; margin-left: 2px; ">Directed</span> 
-                        <br> <br>
-                        {% for movie in directed_list %}
-                        <i class="fas fa-hand-point-right" style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
-                        <a class="Filmography1" href="{% url 'imdb:movie_detail' movie.id_movie.id_movie %}" title="Watch this"
-                            target="_blank">{{movie.id_movie}}</a>
-                        <br> <br>
-                        {% endfor %}
+                    <i class="fas fa-dot-circle" style="font-size: 12px; color:  greenyellow;"></i> <span
+                        style="color: #f5f5f5d6; font-size: 25px; margin-left: 2px; ">Directed</span>
+                    <br> <br>
+                    {% for movie in directed_list %}
+                    <i class="fas fa-hand-point-right"
+                        style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
+                    <a class="Filmography1" href="{% url 'imdb:movie_detail' movie.id_movie.id_movie %}"
+                        title="Watch this" target="_blank">{{movie.id_movie}}</a>
+                    <br> <br>
+                    {% endfor %}
                     {% endif %}
-                    
-                   
+
+
                 </div>
                 <div class="bio">
                     <h3 style="color: yellow; opacity: 0.8; font-size: 28px; margin-top: 12px; margin-bottom: 8px;">
@@ -68,7 +72,8 @@
 
                     <p style="color: #f5f5f5d6; font-family: Arial, Helvetica, sans-serif; font-weight: normal;
                         font-size: 15px; letter-spacing: 0.5px;">
-                        <i class="fas fa-hand-point-right" style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
+                        <i class="fas fa-hand-point-right"
+                            style="font-size: 12px; color: #f5f5f5d6; margin-left: 15px;"></i>
                         {{name.bio_name|slice:":200"}}<span id="dots">...</span><span
                             id="more">{{name.bio_name|slice:"200:"}}</span>
                         <button onclick="myFunction()" id="myBtn">Read more</button>
