--- a/imdb/templates/imdb/movie_detail.html
+++ b/imdb/templates/imdb/movie_detail.html
@@ -23,8 +23,7 @@
 				<div class="rating">
 					<i class="fas fa-star" style="font-size: 30px; border-bottom: 5px; color: yellow;"></i>
 					{{movie.rating_movie}}
-					<i class="far fa-star" style="margin-left: 40px; cursor: pointer;"></i> <a class="rating"
-						href="{{movie.link_movie}}">Rate</a>
+					<a class="rating" href="{{movie.link_movie}}" title="Rate this on imdb" target="_blank" ><i class="far fa-star" style="margin-left: 42px; cursor: pointer;"></i> Rate</a>
 
 				</div>
 				<p class="text-muted-2">
