--- a/templates/base.html
+++ b/templates/base.html
@@ -87,11 +87,13 @@
 
 		<footer class="footer">
 			<div class="iconfooter">
-				<a href="https://www.facebook.com/zuck" target="_blank"><i class="fab fa-facebook-square"></i></a>
+				<a href="https://uet.vnu.edu.vn/" title="UET" target="_blank"><img style="width: 80px; position: absolute; margin-left: -110px;" src="/static/img/Logo_HUET.png"></a>
+				<a href="https://vnu.edu.vn/" title="VNU" target="_blank"><img style="width: 80px; position: absolute; margin-left: 300px;" src="/static/img/Logo_VNU.png"></a>
+				<a href="https://www.facebook.com/UET.VNUH/" target="_blank"><i class="fab fa-facebook-square"></i></a>
 				<a href="https://www.instagram.com/cristiano/?hl=vi" target="_blank"><i
 						class="fab fa-instagram-square"></i></a>
 				<a href="https://twitter.com/potus" target="_blank"><i class="fab fa-twitter"></i></a>
-				<a href="https://www.youtube.com/channel/UC-lHJZR3Gqxm24_Vd_AJ5Yw" target="_blank"><i
+				<a href="https://www.youtube.com/channel/UCwPgT1EkA5ZwIW9lnGyPB3Q" target="_blank"><i
 						class="fab fa-youtube"></i></a>
 				<a href="https://github.com/bachhs/uetimdb" target="_blank"><i class="fab fa-github"></i></a>
 			</div>
