--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>RUNE FILM HD PRO</title>
+	<title>RUNE FILM</title>
+	<link rel = "icon" href = "/static/img/Logo_RUNE.png"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
 	<!-- Link Swiper's CSS -->
@@ -204,5 +205,5 @@
 
 	</div>
 </body>
-
+		
 </html>
