--- a/imdb/templates/imdb/name_list.html
+++ b/imdb/templates/imdb/name_list.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block title %}Biography List - RUNE FILM{% endblock %}
 
+{% block body %}
 <main class="content">
 	<section class="centered">
 		<div class="movies">
