--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,9 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>RUNE FILM</title>
+	<title>
+    	{% block title %}{% endblock %}
+  	</title>
 	<link rel = "icon" href = "/static/img/Logo_RUNE.png"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
