--- a/imdb/templates/imdb/genre_detail.html
+++ b/imdb/templates/imdb/genre_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Top {{genre.name_genre}} Movies - RUNE FILM{% endblock %}
+
 {% block body %}
 <main class="content">
 	<section class="centered">
