--- a/imdb/templates/imdb/movie_list.html
+++ b/imdb/templates/imdb/movie_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Top Movies - RUNE FILM{% endblock %}
+
 {% block body %}
 <div class="homeslider">
 	<div class="swiper-container">
