--- a/imdb/templates/imdb/name_detail.html
+++ b/imdb/templates/imdb/name_detail.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+
+{% block title %}{{name.name_name}} - RUNE FILM{% endblock %}
+
 {% block body %}
 <main class="content">
     <div class="single">
